move com.dxfeed.native.data -> com.dxfeed.native.events

--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -44,14 +44,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\api\C.cs" />
     <Compile Include="src\api\CDataTypes.cs" />
-    <Compile Include="src\data\DxMarshal.cs" />
-    <Compile Include="src\data\NativeFundamental.cs" />
-    <Compile Include="src\data\NativeMarketMaker.cs" />
-    <Compile Include="src\data\NativeOrder.cs" />
-    <Compile Include="src\data\NativeProfile.cs" />
-    <Compile Include="src\data\NativeQuote.cs" />
-    <Compile Include="src\data\NativeTimeAndSale.cs" />
-    <Compile Include="src\data\NativeTrade.cs" />
+    <Compile Include="src\events\DxMarshal.cs" />
+    <Compile Include="src\events\NativeFundamental.cs" />
+    <Compile Include="src\events\NativeMarketMaker.cs" />
+    <Compile Include="src\events\NativeOrder.cs" />
+    <Compile Include="src\events\NativeProfile.cs" />
+    <Compile Include="src\events\NativeQuote.cs" />
+    <Compile Include="src\events\NativeTimeAndSale.cs" />
+    <Compile Include="src\events\NativeTrade.cs" />
     <Compile Include="src\EventBuf.cs" />
     <Compile Include="src\NativeDxException.cs" />
   </ItemGroup>
