--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -52,8 +52,10 @@
     <Compile Include="src\events\NativeQuote.cs" />
     <Compile Include="src\events\NativeTimeAndSale.cs" />
     <Compile Include="src\events\NativeTrade.cs" />
-    <Compile Include="src\EventBuf.cs" />
+    <Compile Include="src\NativeConnection.cs" />
     <Compile Include="src\NativeDxException.cs" />
+    <Compile Include="src\NativeEventBuffer.cs" />
+    <Compile Include="src\NativeSubscription.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
