--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -56,6 +56,7 @@
     <Compile Include="src\NativeConnection.cs" />
     <Compile Include="src\NativeDxException.cs" />
     <Compile Include="src\NativeSubscription.cs" />
+    <Compile Include="src\NativeTools.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
