--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -83,6 +83,7 @@
     <Compile Include="src\events\IDxTimeAndSale.cs" />
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
+    <Compile Include="src\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
   </ItemGroup>
   <ItemGroup />
