update listener interface

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -70,6 +70,7 @@
     <Compile Include="src\data\Side.cs" />
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\EventFlag.cs" />
+    <Compile Include="src\events\EventParams.cs" />
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
     <Compile Include="src\IDxFeedListener.cs" />
