--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -66,12 +66,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Candle\CandleAlignment.cs" />
+    <Compile Include="src\Candle\CandleExchange.cs" />
+    <Compile Include="src\Candle\CandlePeriod.cs" />
+    <Compile Include="src\Candle\CandlePrice.cs" />
+    <Compile Include="src\Candle\CandleSession.cs" />
+    <Compile Include="src\Candle\CandleSymbol.cs" />
+    <Compile Include="src\Candle\CandleSymbolAttribute.cs" />
     <Compile Include="src\data\DxString.cs" />
     <Compile Include="src\data\Side.cs" />
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\EventFlag.cs" />
+    <Compile Include="src\events\IDxCandle.cs" />
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
+    <Compile Include="src\IDxCandleListener.cs" />
     <Compile Include="src\IDxFeedListener.cs" />
     <Compile Include="src\events\EventType.cs" />
     <Compile Include="src\events\IDxEventBuf.cs" />
