implement native subscription tests; bugfix

--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -70,7 +70,9 @@
     <Compile Include="src\api\CandleSymbolTest.cs" />
     <Compile Include="src\api\DxStringTest.cs" />
     <Compile Include="src\api\NativeCandleSubscriptionTest.cs" />
+    <Compile Include="src\api\NativeSnapshotTest.cs" />
     <Compile Include="src\api\NativeSubscriptionTest.cs" />
+    <Compile Include="src\tools\SnapshotTestListener.cs" />
     <Compile Include="src\tools\TestListener.cs" />
   </ItemGroup>
   <ItemGroup>
