--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -98,6 +98,11 @@
     <Compile Include="src\IDxConnection.cs" />
     <Compile Include="src\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
+    <Compile Include="src\ipf\impl\DateFormat.cs" />
+    <Compile Include="src\ipf\InstrumentProfile.cs" />
+    <Compile Include="src\ipf\InstrumentProfileField.cs" />
+    <Compile Include="src\ipf\InstrumentProfileType.cs" />
+    <Compile Include="src\Tools.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
