Implement InstrumentProfileReader(not finished) and dependece classes

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -98,11 +98,19 @@
     <Compile Include="src\IDxConnection.cs" />
     <Compile Include="src\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
+    <Compile Include="src\io\CSVFormatException.cs" />
+    <Compile Include="src\io\CSVReader.cs" />
+    <Compile Include="src\io\URLInputStream.cs" />
+    <Compile Include="src\ipf\impl\Constants.cs" />
     <Compile Include="src\ipf\impl\DateFormat.cs" />
+    <Compile Include="src\ipf\impl\InstrumentProfileParser.cs" />
     <Compile Include="src\ipf\InstrumentProfile.cs" />
     <Compile Include="src\ipf\InstrumentProfileField.cs" />
+    <Compile Include="src\ipf\InstrumentProfileFormatException.cs" />
+    <Compile Include="src\ipf\InstrumentProfileReader.cs" />
     <Compile Include="src\ipf\InstrumentProfileType.cs" />
     <Compile Include="src\Tools.cs" />
+    <Compile Include="src\util\StringCache.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
