--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -107,6 +107,7 @@
     <Compile Include="src\io\CSVFormatException.cs" />
     <Compile Include="src\io\CSVReader.cs" />
     <Compile Include="src\io\CSVWriter.cs" />
+    <Compile Include="src\io\StreamCompression.cs" />
     <Compile Include="src\io\URLInputStream.cs" />
     <Compile Include="src\ipf\impl\Constants.cs" />
     <Compile Include="src\ipf\impl\DateFormat.cs" />
@@ -118,6 +119,9 @@
     <Compile Include="src\ipf\InstrumentProfileReader.cs" />
     <Compile Include="src\ipf\InstrumentProfileType.cs" />
     <Compile Include="src\ipf\InstrumentProfileWriter.cs" />
+    <Compile Include="src\ipf\live\InstrumentProfileConnection.cs" />
+    <Compile Include="src\ipf\live\InstrumentProfileUpdateListener .cs" />
+    <Compile Include="src\ipf\live\InstrumentProfileUpdater.cs" />
     <Compile Include="src\Tools.cs" />
     <Compile Include="src\util\StringCache.cs" />
   </ItemGroup>
