--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\api\CandleSymbolTest.cs" />
     <Compile Include="src\api\DxStringTest.cs" />
+    <Compile Include="src\api\InstrumentProfileLiveTest.cs" />
     <Compile Include="src\api\InstrumentProfileTest.cs" />
     <Compile Include="src\api\NativeCandleSubscriptionTest.cs" />
     <Compile Include="src\api\NativeSnapshotTest.cs" />
@@ -103,6 +104,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="src\data\instrument_profile_data\profiles.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="src\data\instrument_profile_data\update_add_profiles.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="src\data\instrument_profile_data\update_change_field_profiles.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="src\data\instrument_profile_data\update_change_ins_profiles.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="src\data\instrument_profile_data\update_remove_profiles.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
