samlple and class New sample project New class

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -102,7 +102,6 @@
     <Compile Include="src\events\IDxTimeAndSale.cs" />
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
-    <Compile Include="src\IDxOrderViewListener.cs" />
     <Compile Include="src\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
     <Compile Include="src\io\CSVFormatException.cs" />
@@ -119,6 +118,8 @@
     <Compile Include="src\ipf\InstrumentProfileReader.cs" />
     <Compile Include="src\ipf\InstrumentProfileType.cs" />
     <Compile Include="src\ipf\InstrumentProfileWriter.cs" />
+    <Compile Include="src\orderview\IDxOrderViewListener.cs" />
+    <Compile Include="src\orderview\OrderViewSubscription.cs" />
     <Compile Include="src\Tools.cs" />
     <Compile Include="src\util\StringCache.cs" />
   </ItemGroup>
