--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -76,6 +76,8 @@
     <Compile Include="src\api\C32.cs" />
     <Compile Include="src\api\CDataTypes.cs" />
     <Compile Include="src\api\C64.cs" />
+    <Compile Include="src\DXFeed.cs" />
+    <Compile Include="src\DXFeedSubscription.cs" />
     <Compile Include="src\events\DxMarshal.cs" />
     <Compile Include="src\events\NativeCandle.cs" />
     <Compile Include="src\events\NativeEventBuffer.cs" />
