--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -77,6 +77,7 @@
     <Compile Include="src\api\CDataTypes.cs" />
     <Compile Include="src\api\C64.cs" />
     <Compile Include="src\DXFeed.cs" />
+    <Compile Include="src\DXFeedEventListener.cs" />
     <Compile Include="src\DXFeedSubscription.cs" />
     <Compile Include="src\events\DxMarshal.cs" />
     <Compile Include="src\events\NativeCandle.cs" />
