--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -135,4 +135,31 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <None Include="$(MSBuildProjectFile)" />
+  </ItemGroup>
+  <Target Name="CopySources">
+    <Copy SourceFiles="@(Compile)"
+          DestinationFiles="@(Compile->'$(OutputPath)$(MSBuildProjectName)\%(RelativeDir)%(Filename)%(Extension)')"
+          Retries="5"
+          SkipUnchangedFiles="true" />
+    <Copy SourceFiles="@(None)"
+          DestinationFiles="$(OutputPath)$(MSBuildProjectName)\%(RecursiveDir)%(Filename)%(Extension)"
+          Retries="5"
+          SkipUnchangedFiles="true" />
+  </Target>
+  <!-- Update project version tools -->
+  <Import Project="$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks"
+          Condition="Exists('$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks')" />
+  <ItemGroup>
+    <AssemblyInfoFiles Include="$(MSBuildProjectDirectory)\Properties\AssemblyInfo.cs"/>
+  </ItemGroup>
+  <Target Name="UpdateVersion"
+          Inputs="@(AssemblyInfoFiles)"
+          Outputs="UpdatedAssemblyVersionFiles">
+    <AssemblyInfo
+        AssemblyInfoFiles="@(AssemblyInfoFiles)"
+        AssemblyVersion="$(AssemblyVersion)"
+        AssemblyFileVersion="$(AssemblyVersion)" />
+  </Target>
 </Project>
