--- a/dxf_master/dxf_master.csproj
+++ b/dxf_master/dxf_master.csproj
@@ -42,9 +42,6 @@
     <ProjectReference Include="..\dxf_client\dxf_client.csproj">
       <Label>BuildPublish</Label>
     </ProjectReference>
-    <ProjectReference Include="..\dxf_tests\dxf_tests.csproj">
-      <Label>BuildNoPublish</Label>
-    </ProjectReference>
     <ProjectReference Include="..\samples\dxf_candle_sample\dxf_candle_sample.csproj">
       <Label>BuildPublish</Label>
     </ProjectReference>
@@ -127,6 +124,13 @@
   </Target>
   <!-- Run tests tools -->
   <Target Name="RunUnitTests">
+    <ItemGroup>
+      <TestProjects Include="..\dxf_tests\dxf_tests.csproj"/>
+    </ItemGroup>
+    <MSBuild Projects="@(TestProjects)"
+             Targets="Build"
+             ContinueOnError ="false"
+             Properties="Configuration=$(Configuration);Platform=$(Platform)"/>
     <ItemGroup>
       <TestAssemblies Include="..\dxf_tests\bin\$(Configuration)\dxf_tests.dll"/>
     </ItemGroup>
